# tree-sitter-haskell

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  Setup.hs  binding.gyp  cabal.project  flake.nix  go.mod  grammar.js  haskell-tree-sitter.cabal  package-lock.json  package.json  profile.hs  profile.txt  pyproject.toml  setup.py  simple.hs  simple.txt  stack.yaml  tree-sitter-haskell.wasm  tree-sitter.json  tree-sitter.patch
.github/workflows/: assets.yml  ci.yml  legacy.yml  release.yml  test.yml
bindings/c/: tree-sitter-haskell.h  tree-sitter-haskell.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_haskell/: __init__.py  __init__.pyi  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterHaskell/: haskell.h
bindings/swift/TreeSitterHaskellTests/: TreeSitterHaskellTests.swift
build_/: Makefile  binding.Makefile  config.gypi  tree_sitter_haskell_binding.target.mk
build_/Release/: tree_sitter_haskell_binding.node
build_/Release/.deps/Release/: tree_sitter_haskell_binding.node.d
build_/Release/.deps/Release/obj.target/: tree_sitter_haskell_binding.node.d
build_/Release/.deps/Release/obj.target/tree_sitter_haskell_binding/src/: binding.o.d  parser.o.d  scanner.o.d
corpus/: function_declarations.txt
grammar/: basic.js  class.js  conflicts.js  context.js  data.js  decl.js  exp.js  externals.js  general.js  id.js  import.js  inline.js  lexeme.js  literal.js  module.js  operator.js  pat.js  patsyn.js  pattern.js  precedences.js  th.js  type.js  util.js
languages/go/: go.cabal
languages/java/: tree-sitter-java.cabal
languages/java/TreeSitter/: Java.hs
languages/json/: json.cabal  stack.yaml
languages/php/: tree-sitter-php.cabal
languages/php/TreeSitter/: PHP.hs
languages/python/: python.cabal  tree-sitter-python.cabal
languages/ruby/: ruby.cabal
languages/typescript/: tree-sitter-typescript.cabal  typescript.cabal
nix/: outputs.nix
queries/: highlights.scm  locals.scm
script/: bootstrap  cibuild  known-failures-haskell-language-server.txt  known-failures-ivory.txt  known-failures-postgrest.txt  parse-example  parse-example.js  parse-examples  tree-sitter-parse.js
src/: bridge.c  exports.json  grammar.json  id.h  node-types.json  parser.c  scanner.c  scanner.cc  space.h  symop.h  unicode.h  varid-start.h
src/Text/Parser/TreeSitter/: Document.hs  Language.hs  Node.hs
src/TreeSitter/: Document.hs  Language.hs  Node.hs
test/: Spec.hs  common.bash  ensure-parser.bash  main  parse-lib  parse-libs  parse-wasm.mjs  tree-sitter-parse.js
test/corpus/: adt.txt  char.txt  class.txt  comment.txt  consym.txt  context.txt  cpp.txt  data.txt  decl.txt  default.txt  exp.txt  family.txt  foreign.txt  gadt.txt  gendecl.txt  id.txt  implicit.txt  import.txt  instance.txt  layout.txt  literal.txt  module.txt  newtype.txt  number.txt  pat.txt  patsyn.txt  pattern.txt  pragma.txt  prec.txt  signature.txt  special.txt  string.txt  th.txt  topdecl.txt  type.txt  varsym.txt
test/edit/: LambdaCaseEnd.target
test/highlight/: Basic.hs
test/known-failures/: compiler.txt  haskell-language-server.txt  lens.txt  polysemy.txt  semantic.txt
test/parse/: adt.hs  adt.target  bug-119-2.hs  bug-119-2.target  bug-119.hs  bug-119.target  comment-line.hs  comment-line.target  comment-nested.hs  comment-nested.target  comment_line.target  cpp.hs  cpp.target  end-layout-in.hs  end-layout-in.target  end-layout-texp.target  end-layout-where.hs  end-layout-where.target  end_layout_in.hs  end_layout_in.target  end_layout_texp.hs  end_layout_texp.target  end_layout_where.hs  end_layout_where.target  lambda-case.target  lambda_case.target  let-in-layout.target  let_in_layout.hs  let_in_layout.target  newline-greedy.hs  newline-greedy.target  newline-simple.hs  newline-simple.target  newline.hs  pragma.hs  pragma.target  qualified.hs  qualified.target  run.bash  symop.hs  (+1 more)
test/query/: empty-list.hs  empty-list.query  empty-list.target  fun-type.hs  fun-type.query  func.hs  func.query  func.target  operator.hs  operator.query  operator.target  run.bash  super-decl.hs  super-decl.query  super-decl.target  super-expression.hs  super-expression.query  super-expression.target  terminal.hs  terminal.query  terminal.target  type.hs  type.query  type.target  unboxed.hs  unboxed.query  unboxed.target
test/rust/: parse-test.rs  parse.rs  show.rs
tools/: tools.cabal
tools/app/: Main.hs
tools/lib/: TSH.hs
tools/lib/TSH/: Bitmap.hs  BitmapTest.hs  Monad.hs  Options.hs  Unicode.hs  Util.hs
tools/lib/TSH/Bitmap/: Render.hs
tools/lib/TSH/Data/: Bitmap.hs  Options.hs  Unicode.hs
tools/lib/TSH/Unicode/: Category.hs
tools/test/: Main.hs
tools/test/TSH/Test/: GapsTest.hs  Utils.hs
