[package]
name = "tree-sitter-haskell"
description = "Haskell grammar for tree-sitter"
version = "1.0.0"
authors = ["Max Brunsfeld <maxbrunsfeld@gmail.com>"]
license = "MIT"
keywords = ["incremental", "parsing", "tree-sitter", "haskell"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-haskell"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">= 0.21.0"

[build-dependencies]
cc = "1.0.96"
