name:                haskell-tree-sitter
version:             0.1.0
synopsis:            haskell tree-sitter bindings
description:         Please see README.md
homepage:            http://github.com/tree-sitter/haskell-tree-sitter#readme
license:             BSD3
license-file:        LICENSE
author:              Rob Rix, Josh Vera, Tim Clem, Rick Winfrey, Max Brunsfeld
maintainer:          rob.rix@github.com
copyright:           2015 GitHub
category:            Web
build-type:          Custom
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , c-storable-deriving
                     , split
                     , template-haskell >= 2.12 && < 2.13
  default-language:    Haskell2010
  default-extensions:  FlexibleInstances, OverloadedStrings, NoImplicitPrelude, RecordWildCards
  exposed-modules:     TreeSitter.Document
                     , TreeSitter.Language
                     , TreeSitter.Node
  c-sources:           src/bridge.c
                     , vendor/tree-sitter/src/runtime/document.c
                     , vendor/tree-sitter/src/runtime/error_costs.c
                     , vendor/tree-sitter/src/runtime/language.c
                     , vendor/tree-sitter/src/runtime/lexer.c
                     , vendor/tree-sitter/src/runtime/node.c
                     , vendor/tree-sitter/src/runtime/parser.c
                     , vendor/tree-sitter/src/runtime/stack.c
                     , vendor/tree-sitter/src/runtime/string_input.c
                     , vendor/tree-sitter/src/runtime/tree.c
                     , vendor/tree-sitter/src/runtime/utf16.c
                     , vendor/tree-sitter/externals/utf8proc/utf8proc.c
  cc-options:          -std=c99 -Os

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-tree-sitter
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tree-sitter/haskell-tree-sitter

custom-setup
  setup-depends:  base >= 4.8 && < 5
                , Cabal
                , directory
                , process
