name:                tree-sitter-java
version:             0.1.0
synopsis:            tree-sitter java language bindings
description:         Please see README.md
homepage:            https://github.com/tree-sitter/tree-sitter-java#readme
author:              Ayman Nadeem, Max Brunsfeld, Tim Clem, Rob Rix, Josh Vera, Rick Winfrey
maintainer:          aymannadeem@github.com
copyright:           2018 GitHub
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     TreeSitter.Java
  build-depends:       base >= 4.7 && < 5
                     , haskell-tree-sitter
  default-language:    Haskell2010
  c-sources:           vendor/tree-sitter-Java/src/parser.c
  extra-libraries:     stdc++

source-repository head
  type:     git
  location: https://github.com/tree-sitter/tree-sitter-java
